--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -12,7 +13,7 @@
     <body>
         <header>
             <div class="intro">
-                <img src="logo.png" width="300" height="100">
+                <img class="imagem-nome" src="logo.png" width="300" height="100">
                 <img id="logomarca" src="logomarca.png" width="70" height="60">
                 <nav>
                     <ul>
